deuxième fix alignement cards

--- a/src/composants/Home.css
+++ b/src/composants/Home.css
@@ -70,6 +70,14 @@
         width: 100%;
     }
 
+    #card1 {
+        width: 80vw;
+    }
+
+    #card2 {
+        width: 80vw;
+    }
+
     .card {
         width: 80vw;
     }
